k8s/base/nextapp.yml
apiVersion: v1
kind: Service
metadata:
  name: nextapp
spec:
  selector:
    app: nextapp
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextapp
  template:
    metadata:
      labels:
        app: nextapp
    spec:
      containers:
        - name: nextapp
          image: gitlab.local:5050/root/terraform/nextapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
