k8s/base/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: gitlab.local:5050/root/terraform/postgres:15.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-init-sql
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "admin", "-d", "db"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: postgres-init-sql
          configMap:
            name: postgres-init-sql
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-storage
        selector:
          matchLabels:
            app: postgres
        resources:
          requests:
            storage: 10Gi
